--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -11,6 +11,7 @@
       <div class="navbar-inner">
         <ul class="nav">
           <li><a href="/NewEvent.html">Create Event</a></li>
+          <li><a href="/EditProfile.html">Edit Profile</a></li>
         </ul>
       </div>
     </div>
@@ -83,5 +84,6 @@
   <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/js/filters.js"></script>
   <script type="text/javascript" src="/js/controllers/EventDetailController.js"></script>
+  <script type="text/javascript" src="/js/services/EventData.js"></script>
 </body>
 </html>
