--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -77,13 +77,13 @@
     </div>
   </div>
   <script type="text/javascript" src="/lib/angular/angular.js"></script>
-  <script type="text/javascript" src="/lib/angular/angular-sanitize.js"></script>
+  <script type="text/javascript" src="/lib/angular/angular-resource.min.js"></script>
   <script type="text/javascript" src="/lib/bootstrap.js"></script>
   <script type="text/javascript" src="/lib/underscore-1.4.4.min.js"></script>
   <script type="text/javascript" src="/lib/jquery.min.js"></script>
   <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/js/filters.js"></script>
   <script type="text/javascript" src="/js/controllers/EventDetailController.js"></script>
-  <script type="text/javascript" src="/js/services/EventData.js"></script>
+  <script type="text/javascript" src="/js/services/eventData.js"></script>
 </body>
 </html>
