--- a/app/NewEvent.html
+++ b/app/NewEvent.html
@@ -24,13 +24,13 @@
             <label for="eventDate">Event Date:</label>
             <input id="eventDate" type="text" required ng-pattern="/\d\d/\d\d/\d\d\d\d/" ng-model="event.date" placeholder="format (mm/dd/yyyy)" />
             <span class="error" ng-show="newEventForm.$error.pattern">Must be in mm/dd/yyyy format</span>
-            <label for="eventTime">Event Date:</label>
+            <label for="eventTime">Event Time:</label>
             <input id="eventTime" type="text" ng-model="event.time" placeholder="start and end time..." />
             <label for="eventLocation">Location:</label>
             <input id="eventLocation" type="text" ng-model="event.location.address" placeholder="Address of event" />
             <br />
             <input type="text" id="eventCity" ng-model="event.location.city" class="input-small" placeholder="city..." />
-            <input type="text" id="eventState" ng-model="event.location.state" class="input-small" placeholder="city..." />
+            <input type="text" id="eventState" ng-model="event.location.state" class="input-small" placeholder="State..." />
 
             <label for="eventImageUrl">Image:</label>
             <input type="url" id="eventImageUrl" ng-model="event.imageUrl" class="input-xlarge" placeholder="Url of image..." />
@@ -44,13 +44,13 @@
     </div>
    </div>
   <script type="text/javascript" src="/lib/angular/angular.js"></script>
-  <script type="text/javascript" src="/lib/angular/angular-sanitize.js"></script>
+  <script type="text/javascript" src="/lib/angular/angular-resource.min.js"></script>
   <script type="text/javascript" src="/lib/bootstrap.js"></script>
   <script type="text/javascript" src="/lib/underscore-1.4.4.min.js"></script>
   <script type="text/javascript" src="/lib/jquery.min.js"></script>
   <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/js/filters.js"></script>
-  <script type="text/javascript" src="/js/controllers/EventDetailController.js"></script>
+  <script type="text/javascript" src="/js/services/eventData.js"></script>
   <script type="text/javascript" src="/js/controllers/EditEventController.js"></script>
 </body>
 
